# Stackr

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: embed_web_assets.cmake  fetch_capstone.cmake  fetch_webview2.cmake
host/: CMakeLists.txt
host/resources/: stackr.manifest  stackr.rc
host/src/: app.cpp  app.h  main.cpp
host/src/analysis/: call_tree.cpp  call_tree.h  flat_profile.cpp  flat_profile.h  methods.cpp  methods.h  source_view.cpp  source_view.h  types.h
host/src/disasm/: disassembler.cpp  disassembler.h  methods.cpp  methods.h  types.h
host/src/ipc/: rpc_router.cpp  rpc_router.h
host/src/process/: attacher.cpp  attacher.h  enumerator.cpp  enumerator.h  launcher.cpp  launcher.h  methods.cpp  methods.h  registry.cpp  registry.h  types.h
host/src/sampler/: methods.cpp  methods.h  ringbuffer.cpp  ringbuffer.h  sampler.cpp  sampler.h  stackwalk.cpp  stackwalk.h  types.h
host/src/symbols/: methods.cpp  methods.h  resolver.cpp  resolver.h  search_path.cpp  search_path.h  session.cpp  session.h  types.h
host/src/system/: methods.cpp  methods.h
host/src/util/: json.cpp  json.h  logging.cpp  logging.h
host/src/webview/: virtual_host.cpp  virtual_host.h  webview_host.cpp  webview_host.h
host/test/: process_dump.cpp  sampler_smoke.cpp
web/: next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: CallTreeView.tsx  CaptureView.tsx  ContextMenu.tsx  DisassemblyView.tsx  FlamegraphView.tsx  FlatProfile.tsx  LaunchDialog.tsx  ModulesView.tsx  PlaceholderView.tsx  ProcessPicker.tsx  Select.tsx  SettingsView.tsx  Sidebar.tsx  SourceView.tsx  StatusBar.tsx  ThreadsView.tsx  TitleBar.tsx
web/src/lib/: aliases.ts  bridge.ts  navigation.ts  settings.ts  useAnimatedNumber.ts
